--- a/data/content/building_my_blog_with_htmx_and_axum.html
+++ b/data/content/building_my_blog_with_htmx_and_axum.html
@@ -150,7 +150,7 @@ crossorigin="anonymous"
     features can truly shine. I won't gush over the language right now, but the
     best part is that when Rust compiles, I have a good feeling that whatever I
     wrote is going to work and if it doesn't there will be clear reason why.
-    This feeling is infectious and is likely what powers it's strong community.
+    This feeling is infectious and is likely what powers its strong community.
   </p>
   <p>
     Finally, below is a brief summary of the tech choices I made and why I made
@@ -206,7 +206,7 @@ crossorigin="anonymous"
     able to choose the technologies and methodologies yourself) rather than
     reaching for the framework-specific documentation and doing whatever needs
     to be done in the exact way that it has been prescribed. While I near the
-    end of the bulk of this project, I'm starting feel that magic.
+    end of the bulk of this project, I'm starting to feel that magic.
   </p>
   <p>
     I'd like to call it the HAAx (Htmx, Askama, Axum) framework. Unfortunately,
